--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,7 +123,7 @@ section.price-container {
   border-radius: 50%;
   height: 10px;
   width: 10px;
-  content: '';
+  content: "";
 }
 
 .change.up {
@@ -201,6 +201,7 @@ button:active {
 }
 
 footer {
+  margin: 6px 0;
   display: flex;
   justify-content: space-around;
   background: var(--stonex-neutral-grey-1);
